--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
-language: haskell
-ghc: 7.8
+language: c
+sudo: false
+cache:
+  directories:
+  - $HOME/.local/bin
+  - $HOME/.stack
 matrix:
   exclude:
     - ghc: 7.8
@@ -58,19 +62,8 @@ matrix:
     #       sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise']
     #       packages: ['g++-4.9','libedit-dev','llvm-3.8-dev']
 before_install:
-  - export PATH=$HOME/.cabal/bin:$PATH
+  - sh tools/install-stack.sh
+  - ln -s $(which llvm-config-${LLVM_VERSION}) .local/bin/llvm-config
 install:
-  - cabal install cabal-install
-  - cabal --version
-  - llvm-config-${LLVM_VERSION} --version
-  - cabal install cpphs
-  - cabal install --only-dependencies
-script:
-  - ghc --make Setup.hs -o setup
-  - ./setup configure --user --enable-tests --verbose=2 --with-llvm-config=llvm-config-${LLVM_VERSION} --ghc-options="${COMPILER_OPTS}"
-  - ./setup build --verbose=2
-  - ./setup test
-#cache:
-#  directories:
-#    - $HOME/.cabal
-sudo: false
+  - stack setup
+  - stack build
