--- a/.travis.yml
+++ b/.travis.yml
@@ -61,10 +61,10 @@ matrix:
     #     apt:
     #       sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise']
     #       packages: ['g++-4.9','libedit-dev','llvm-3.8-dev']
-before_install:
+install:
   - sh tools/install-stack.sh
   - sh tools/install-llvm.sh
-install:
+script:
   - stack setup
   - stack build --ghc-options="${COMPILER_OPTS}"
-after_success:
+
