--- a/.travis.yml
+++ b/.travis.yml
@@ -14,48 +14,63 @@ matrix:
           packages: ['llvm-2.8-dev','libgmp-dev']
     - env: LLVM_VERSION=2.8
       os: osx
-      addons:
-        apt:
-          packages: ['llvm-2.8-dev','libgmp-dev']
     - env: LLVM_VERSION=2.9
       addons:
         apt:
           packages: ['llvm-2.9-dev','libgmp-dev']
+    - env: LLVM_VERSION=2.9
+      os: osx
     - env: LLVM_VERSION=3.0
       addons:
         apt:
           packages: ['llvm-3.0-dev','libgmp-dev']
+    - env: LLVM_VERSION=3.0
+      os: osx
     - env: LLVM_VERSION=3.1
       addons:
         apt:
           packages: ['llvm-3.1-dev','libgmp-dev']
+    - env: LLVM_VERSION=3.1
+      os: osx
     - env: LLVM_VERSION=3.2
       addons:
         apt:
           packages: ['llvm-3.2-dev','libgmp-dev']
+    - env: LLVM_VERSION=3.2
+      os: osx
     - env: LLVM_VERSION=3.3
       addons:
         apt:
           packages: ['llvm-3.3-dev','libgmp-dev']
+    - env: LLVM_VERSION=3.3
+      os: osx
     - env: LLVM_VERSION=3.4
       addons:
         apt:
           packages: ['llvm-3.4-dev','libgmp-dev']
+    - env: LLVM_VERSION=3.4
+      os: osx
     - env: LLVM_VERSION=3.5 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5']
           packages: ['g++-4.9','libedit-dev','llvm-3.5-dev','libgmp-dev']
+    - env: LLVM_VERSION=3.5
+      os: osx
     - env: LLVM_VERSION=3.6 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.6']
           packages: ['g++-4.9','libedit-dev','llvm-3.6-dev','libgmp-dev']
+    - env: LLVM_VERSION=3.6
+      os: osx
     - env: LLVM_VERSION=3.7 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.7']
           packages: ['g++-4.9','libedit-dev','llvm-3.7-dev','libgmp-dev']
+    - env: LLVM_VERSION=3.7
+      os: osx
     # - env: LLVM_VERSION=3.8 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
     #   addons:
     #     apt:
