Be more verbose

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,51 +12,51 @@ matrix:
       addons:
         apt:
           packages: ['llvm-2.8-dev','libgmp-dev']
-    - env: LLVM_VERSION=2.8
-      os: osx
+    #- env: LLVM_VERSION=2.8
+    #  os: osx
     - env: LLVM_VERSION=2.9
       addons:
         apt:
           packages: ['llvm-2.9-dev','libgmp-dev']
-    - env: LLVM_VERSION=2.9
-      os: osx
+    #- env: LLVM_VERSION=2.9
+    #  os: osx
     - env: LLVM_VERSION=3.0
       addons:
         apt:
           packages: ['llvm-3.0-dev','libgmp-dev']
-    - env: LLVM_VERSION=3.0
-      os: osx
+    #- env: LLVM_VERSION=3.0
+    #  os: osx
     - env: LLVM_VERSION=3.1
       addons:
         apt:
           packages: ['llvm-3.1-dev','libgmp-dev']
-    - env: LLVM_VERSION=3.1
-      os: osx
+    #- env: LLVM_VERSION=3.1
+    #  os: osx
     - env: LLVM_VERSION=3.2
       addons:
         apt:
           packages: ['llvm-3.2-dev','libgmp-dev']
-    - env: LLVM_VERSION=3.2
-      os: osx
+    #- env: LLVM_VERSION=3.2
+    #  os: osx
     - env: LLVM_VERSION=3.3
       addons:
         apt:
           packages: ['llvm-3.3-dev','libgmp-dev']
-    - env: LLVM_VERSION=3.3
-      os: osx
+    #- env: LLVM_VERSION=3.3
+    #  os: osx
     - env: LLVM_VERSION=3.4
       addons:
         apt:
           packages: ['llvm-3.4-dev','libgmp-dev']
-    - env: LLVM_VERSION=3.4
-      os: osx
+    #- env: LLVM_VERSION=3.4
+    #  os: osx
     - env: LLVM_VERSION=3.5 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5']
           packages: ['g++-4.9','libedit-dev','llvm-3.5-dev','libgmp-dev']
-    - env: LLVM_VERSION=3.5
-      os: osx
+    #- env: LLVM_VERSION=3.5
+    #  os: osx
     - env: LLVM_VERSION=3.6 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
@@ -81,5 +81,5 @@ install:
   - sh tools/install-llvm.sh
 script:
   - stack setup
-  - stack build --ghc-options="${COMPILER_OPTS}"
+  - stack build --ghc-options="${COMPILER_OPTS}" --cabal-verbose
 
